--- a/data/gantry5/themes/g5_helium/css-compiled/helium-grav__body_only.css
+++ b/data/gantry5/themes/g5_helium/css-compiled/helium-grav__body_only.css
@@ -14,7 +14,7 @@
 /* line 9, user/plugins/gantry5/engines/nucleus/scss/nucleus/mixins/_utilities.scss */
 /* line 2, user/plugins/gantry5/engines/nucleus/scss/nucleus/theme/_alerts.scss */
 .alert {
-  border-radius: 0.1875rem;
+  border-radius: 0.25rem;
   padding: 0.938rem;
   margin-bottom: 1.5rem;
   text-shadow: none;
@@ -159,7 +159,7 @@
   margin-top: 2rem;
   background: rgba(255, 255, 255, 0);
   border: 1px solid #fff;
-  border-radius: 3px;
+  border-radius: 0.25rem;
   box-shadow: none;
   font-size: 1.3rem;
 }
@@ -309,7 +309,7 @@
 }
 /* line 32, user/plugins/gantry5/engines/nucleus/scss/grav/theme/modular/_text.scss */
 .callout img {
-  border-radius: 3px;
+  border-radius: 0.25rem;
 }
 /* line 5, user/plugins/gantry5/engines/nucleus/scss/grav/theme/modular/_all.scss */
 /* line 6, user/plugins/gantry5/engines/nucleus/scss/grav/theme/modular/_all.scss */
@@ -396,7 +396,7 @@
 }
 /* line 37, user/plugins/gantry5/engines/nucleus/scss/grav/theme/_blog.scss */
 .blog-header.blog-header-image h1, .blog-header.blog-header-image h2 {
-  color: #fff;
+  color: #eceeef;
 }
 /* line 43, user/plugins/gantry5/engines/nucleus/scss/grav/theme/_blog.scss */
 .blog-header h1 {
@@ -437,7 +437,7 @@
 }
 /* line 74, user/plugins/gantry5/engines/nucleus/scss/grav/theme/_blog.scss */
 .list-item .list-blog-header h4 a {
-  color: #666;
+  color: #424753;
 }
 /* line 76, user/plugins/gantry5/engines/nucleus/scss/grav/theme/_blog.scss */
 .list-item .list-blog-header h4 a:hover {
@@ -447,13 +447,13 @@
 .list-item .list-blog-header img {
   display: block;
   margin-top: 1rem;
-  border-radius: 3px;
+  border-radius: 0.25rem;
 }
 /* line 87, user/plugins/gantry5/engines/nucleus/scss/grav/theme/_blog.scss */
 /* line 88, user/plugins/gantry5/engines/nucleus/scss/grav/theme/_blog.scss */
 .list-item .list-blog-header .list-blog-meta .separator {
   margin: 0 0.3rem;
-  color: rgba(102, 102, 102, 0.2);
+  color: rgba(66, 71, 83, 0.2);
 }
 /* line 97, user/plugins/gantry5/engines/nucleus/scss/grav/theme/_blog.scss */
 /* line 98, user/plugins/gantry5/engines/nucleus/scss/grav/theme/_blog.scss */
