--- a/themes/g5_helium/custom/particles/edit_view_page_in_git.html.twig
+++ b/themes/g5_helium/custom/particles/edit_view_page_in_git.html.twig
@@ -37,9 +37,11 @@
         <i class="fa fa-cog" aria-hidden="true"></i> Setup Git Sync Plugin (Step 1 of 2)</a>
         </div>
       {% else %}
+        <div class="view_edit_page_in_git {{ particle.css.class }}">
         {% set admin_panel_appearance_url = grav.base_url ~ '/admin/gantry/configurations/default/styles' %}
         <a href="{{ admin_panel_appearance_url }}" title="Setup Edit Page in Git Link (Step 2 of 2)">
         <i class="fa fa-cog" aria-hidden="true"></i> Setup Edit Page in Git Link (Step 2 of 2)</a>
+        </div>
       {% endif %}
     {% endif %}
   {% endif %}
