--- a/data/gantry5/themes/g5_hydrogen/css-compiled/custom.css
+++ b/data/gantry5/themes/g5_hydrogen/css-compiled/custom.css
@@ -12,3 +12,7 @@
 div[data-grav-field="password"] {
   margin-bottom: 1rem;
 }
+/* line 5, user/themes/g5_hydrogen/custom/scss/custom.scss */
+body {
+  font-size: 1rem;
+}
