--- a/data/gantry5/themes/g5_hydrogen/css-compiled/custom__error.css
+++ b/data/gantry5/themes/g5_hydrogen/css-compiled/custom__error.css
@@ -8,4 +8,11 @@
    http://docs.gantry.org/gantry5/tutorials/adding-a-custom-style-sheet
  */
 
-/* @import "custom.scss" */
+/* line 1, user/themes/g5_hydrogen/custom/scss/custom.scss */
+div[data-grav-field="password"] {
+  margin-bottom: 1rem;
+}
+/* line 5, user/themes/g5_hydrogen/custom/scss/custom.scss */
+body {
+  font-size: 1rem;
+}
