--- a/themes/g5_hydrogen/custom/scss/custom.scss
+++ b/themes/g5_hydrogen/custom/scss/custom.scss
@@ -5,3 +5,19 @@ div[data-grav-field="password"] {
 body {
     font-size: 1rem;
 }
+
+.git-edit .g-content {
+    margin: 0.26rem;
+}
+
+.radio {
+    display: list-item;
+}
+
+.checkboxes {
+    display: list-item;
+}
+
+#g-sidebar, #g-aside {
+    padding: 0;
+}
