--- a/themes/g5_helium/custom/scss/custom.scss
+++ b/themes/g5_helium/custom/scss/custom.scss
@@ -5,3 +5,11 @@ div[data-grav-field="password"] {
 body {
     font-size: 1rem;
 }
+
+.radio {
+    display: list-item;
+}
+
+.checkboxes {
+    display: list-item;
+}
